# OpenIGTLink

./: .appveyor.yml  .gitignore  .hooks-config.bash  .travis.yml  BUILD.md  CMakeLists.txt  DartConfig.cmake  FindOpenIGTLink.cmake  GenerateOpenIGTLinkConfig.cmake  LICENSE.txt  NOTICE  OpenIGTLinkConfig.cmake.in  OpenIGTLinkConfigPlatform.cmake  OpenIGTLinkPython.i  README  README.md  README.txt  UseOpenIGTLink.cmake.in  appveyor.yml  commit-msg  igtlConfigure.h.in  igtlTypeConfig.h.in  igtl_typeconfig.h.in  prepare-commit-msg
Documents/Doxygen/: CMakeLists.txt  DoxygenFooter.html  DoxygenHeader.html  MainPage.dox
Examples/Bind/: BindClient.cxx  BindServer.cxx  CMakeLists.txt
Examples/Capability/: CMakeLists.txt  CapabilityClient.cxx  CapabilityServer.cxx
Examples/ImageMeta/: CMakeLists.txt  ImageMetaClient.cxx  ImageMetaServer.cxx  LabelMetaClient.cxx  LabelMetaServer.cxx
Examples/Imager/: CMakeLists.txt  ImagerClient.cxx  ImagerClient2.cxx  ImagerClient3.cxx  ImagerServer.cxx  ImagerServer3.cxx
Examples/Point/: CMakeLists.txt  PointClient.cxx  PointClient3.cxx  PointListServer.cxx  PointServer.cxx  PointServer3.cxx
Examples/PolyData/: CMakeLists.txt  PolyDataClient.cxx  PolyDataServer.cxx
Examples/QuaternionTrackingData/: CMakeLists.txt  QuaternionTrackingDataClient.cxx  QuaternionTrackingDataServer.cxx
Examples/Receiver/: CMakeLists.txt  ReceiveClient.cxx  ReceiveServer.cxx
Examples/SampleUDPProgam/: CMakeLists.txt  ClientUDPTransfer.cxx  ServerUDPTransfer.cxx
Examples/String/: CMakeLists.txt  StringClient.cxx  StringClientSend.cxx  StringEchoServer.cxx  StringServer.cxx
Examples/Thread/: CMakeLists.txt  MultipleMethodExecute.cxx  SingleMethodExecute.cxx  SpawnThread.cxx
Examples/Tracker/: CMakeLists.txt  TrackerClient.cxx  TrackerClient2.cxx  TrackerClient3.cxx  TrackerServer.cxx  TrackerServer2.cxx
Examples/TrackingData/: CMakeLists.txt  TrackingDataClient.cxx  TrackingDataServer.cxx
Examples/TrackingDataUDPTransfer/: CMakeLists.txt  TrackingDataClientUDPTransfer.cxx  TrackingDataServerUDPTransfer.cxx
Examples/Trajectory/: CMakeLists.txt  TrajectoryClient.cxx  TrajectoryServer.cxx
Examples/VideoStreaming/: CMakeLists.txt  ClientConfig.cfg  CodecConfig.cfg  CodecEvaluation.cxx  EncoderLayerConfig.cfg  ServerConfig.cfg  UltrasonixEval.cxx  VideoClient.cxx  VideoCompressionExample.cxx  VideoMetaClient.cxx  VideoMetaServer.cxx  VideoServer.cxx  VideoStreamReceiver.cxx  VideoStreamServer.cxx  X265DecodeTest.cxx  X265EncodeTest.cxx
Examples/WebSocket/: CMakeLists.txt  WebSocketClient.cxx  WebSocketServer.cxx  index.html
Source/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.cxx  H264Decoder.h  H264Encoder.cpp  H264Encoder.cxx  H264Encoder.h  H265Decoder.cxx  H265Decoder.h  H265Encoder.cxx  H265Encoder.h  VPXDecoder.cxx  VPXDecoder.h  VPXEncoder.cxx  VPXEncoder.h  VideoStreamIGTLinkReceiver.cxx  VideoStreamIGTLinkReceiver.h  VideoStreamIGTLinkServer.cxx  VideoStreamIGTLinkServer.h  igtlBindMessage.cxx  igtlBindMessage.h  igtlCapabilityMessage.cxx  igtlCapabilityMessage.h  igtlClientSocket.cxx  igtlClientSocket.h  igtlCodecCommonClasses.cxx  igtlCodecCommonClasses.h  igtlColorTableMessage.cxx  igtlColorTableMessage.h  igtlCommandMessage.cxx  igtlCommandMessage.h  igtlCommon.h  igtlConditionVariable.cxx  igtlConditionVariable.h  igtlCreateObjectFunction.h  igtlFastMutexLock.cxx  igtlFastMutexLock.h  igtlFullTrackingDataWithErrorMessage.cxx  igtlFullTrackingDataWithErrorMessage.h  igtlGeneralSocket.cxx  (+82 more)
Source/VideoStreaming/: CMakeLists.txt  H264Decoder.cxx  H264Decoder.h  H264Encoder.cxx  H264Encoder.h  H265Decoder.cxx  H265Decoder.h  H265Encoder.cxx  H265Encoder.h  VP9Decoder.cxx  VP9Decoder.h  VP9Encoder.cxx  VP9Encoder.h  VideoStreamIGTLinkReceiver.cxx  VideoStreamIGTLinkServer.cxx  VideoStreaming.cmake  igtlAV1Decoder.cxx  igtlAV1Decoder.h  igtlAV1Encoder.cxx  igtlAV1Encoder.h  igtlCodecCommonClasses.cxx  igtlCodecCommonClasses.h  igtlH264Decoder.cxx  igtlH264Decoder.h  igtlH264Encoder.cxx  igtlH264Encoder.h  igtlH265Decoder.cxx  igtlH265Decoder.h  igtlH265Encoder.cxx  igtlH265Encoder.h  igtlI420Decoder.cxx  igtlI420Decoder.h  igtlI420Encoder.cxx  igtlI420Encoder.h  igtlVP9Decoder.cxx  igtlVP9Decoder.h  igtlVP9Encoder.cxx  igtlVP9Encoder.h  igtlVideoMessage.cxx  igtlVideoMessage.h  (+11 more)
Source/WebSocket/: CMakeLists.txt  WebSocket.cmake  igtlWebClientSocket.cxx  igtlWebClientSocket.h  igtlWebServerSocket.cxx  igtlWebServerSocket.h
Source/igtlutil/: CMakeLists.txt  igtl_bind.c  igtl_bind.h  igtl_capability.c  igtl_capability.h  igtl_colortable.c  igtl_colortable.h  igtl_command.c  igtl_command.h  igtl_fulltdata.c  igtl_fulltdata.h  igtl_fulltransform.h  igtl_header.c  igtl_header.h  igtl_image.c  igtl_image.h  igtl_imgmeta.c  igtl_imgmeta.h  igtl_lbmeta.c  igtl_lbmeta.h  igtl_ndarray.c  igtl_ndarray.h  igtl_point.c  igtl_point.h  igtl_polydata.c  igtl_polydata.h  igtl_position.c  igtl_position.h  igtl_qtdata.c  igtl_qtdata.h  igtl_qtrans.c  igtl_qtrans.h  igtl_query.c  igtl_query.h  igtl_sensor.c  igtl_sensor.h  (+18 more)
Testing/: CMakeLists.txt  CMakeLists.txt.in  External_googletest.cmake  GoogletestDownload.txt.in  igtlBindMessageTest.cxx  igtlCapabilityMessageTest.cxx  igtlClientSocketTest.cxx  igtlColorTableMessageTest.cxx  igtlCommandMessageTest.cxx  igtlConditionVariableTest.cxx  igtlImageMessage2Test.cxx  igtlImageMessageTest.cxx  igtlImageMetaMessageTest.cxx  igtlLabelMetaMessageTest.cxx  igtlMessageBaseTest.cxx  igtlMessageFactoryTest.cxx  igtlMessageFormat2TestMacro.h  igtlMessageFormat2TestMarco.h  igtlMessageRTPWrapperTest.cxx  igtlMultiThreaderTest1.cxx  igtlMultiThreaderTest2.cxx  igtlMultiThreaderTest3.cxx  igtlNDArrayMessageTest.cxx  igtlPointMessageTest.cxx  igtlPolyDataMessageTest.cxx  igtlPositionMessageTest.cxx  igtlSensorMessageTest.cxx  igtlServerSocketTest.cxx  igtlSocketTest.cxx  igtlStatusMessageTest.cxx  igtlStringMessageTest.cxx  igtlTestConfig.h.in  igtlTimeStampTest1.cxx  igtlTrackingDataMessageTest.cxx  igtlTrajectoryMessageTest.cxx  igtlTransformMessageTest.cxx  igtlVideoMessageTest.cxx  igtlVideoMetaMessageTest.cxx
(+179 files in other folders)
